--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <meta charset="UTF-8">
   <title>Studentkortet</title>
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="shortcut icon" href="https://i.imgur.com/J1vWULZ.png">
+  <link rel="apple-touch-icon" href="https://i.imgur.com/J1vWULZ.png">
+  
 </head>
 <body>
 <!-- partial:index.partial.html -->
